--- a/src/html/base/footer.hbs
+++ b/src/html/base/footer.hbs
@@ -1,3 +1,13 @@
+<div class='story-body'>
+    <p>Experts have pointed out that sexual harassment cases are difficult to file in China as it is hard to obtain evidence. Plantiffs have lost most of the cases in history. Even when the victims won, compensations for such cases are merely 3,000 yuan ($400) on average. </p>
+    <p>All these have prevented victims from publicly defending their rights, as they could risk many things for nothing. The MeToo movement in 2018 was a rare oppotunity for victims to stand together and speak up. But unfortunately, strong support from the legal system was still missing in most cases. </p>
+
+</div>
+
 <div class="footer">
     &copy; <a href="{{ meta.site }}">{{ meta.siteName }}</a> 2019
+</div>
+
+<div class='story-body'>
+    <p style = 'text-align:center; color:white'></p>
 </div>
