--- a/src/html/base/headline.hbs
+++ b/src/html/base/headline.hbs
@@ -1,5 +1,18 @@
-<img id='loading_image' src="images/title.png"></p>
-<div class="header">
+<div class='top'></div>
+
+    <h1 class='headline' style = 'text-align:center; color: white'>#MeToo In China</h1>
+    <div class='story-body'>
+    <h2 class='subhead' style = 'text-align:center; color:white'></h2>
+    <p></p>
+    <p class='byline' style = 'text-align:center; color: white'>By Ming Li, Dong Yinan and Arun Karki</p>
+    <p class='date' style = 'text-align:center; color: white'>PUBLISHED DECEMBER 14, 2019</p>   
+    <p style='color: white'>In 2018, 149 people, mostly women, from all over China chose to speak up and report those who had sexual assaulting him or her. Altogether 54 preptrators were revealed. It was known as the Chinese version of the global MeToo Movement.</p>
+    <p style='color: white'>This project aims to document what happened, who were the preptrators and more importantly, the courageous individuals who stood up and became a power in changing social conceptions and even legislations.</p>
+    <p style='color: white'></p>
+    </div>
+
+{{!-- </div> --}}
+{{!-- <div class="header">
     <p class="kicker">{{ kicker }}</p>
     <h1 class="headline">{{ headline }}</h1>
     <h2 class="subhead">{{ subhead }}</h2>
@@ -12,4 +25,4 @@
     </p>
 
     <p class="date">Published {{ published_date }}</p>
-</div>
+</div> --}}
