--- a/src/html/layouts/default.hbs
+++ b/src/html/layouts/default.hbs
@@ -6,7 +6,7 @@
   {{> base/fonts }}
   {{> base/analytics }}
 </head>
-<body class='grey-theme'>
+<body class='dark-theme'>
   <!-- The headline area pulls most of its content from data/meta.json -->
   {{> base/headline }}
 
