--- a/src/html/story/basic.hbs
+++ b/src/html/story/basic.hbs
@@ -1,4 +1,5 @@
-  <p></p>
+ <div class='story-body'>
+  
   <p></p>
   <!-- If you use images, the path is just images/___ -->
   <p style="text-align: center"><img src=""></p>
