--- a/src/html/story/chart-01.hbs
+++ b/src/html/story/chart-01.hbs
@@ -1,21 +1,31 @@
+<div class='story-body'>
+    <h2></h2>
+    <p style='color: white'>#MeToo in China first erupted at the begining of 2018 on social media platforms like weibo and wechat. The first few cases that caught public attention were mostly from colleage campuses, where professors were accused of sexually harrassing or even raping their female students.</p> 
+    <p style='color: white'> Encouraged by the early cases, more and more people broke the silence. The highlight of the movement was in July, when the number of reported preptrators surged 33 in a single month. Meanwhile, the movement spread beyond campuses and brought down many prominent figures across multiple industries.</p>
+</div>
 <div class="story-body scrollytelling">
-    <h2>1. Preptrator Chart By Month</h2> 
     <figure class="preptrator"></figure>
     <div class="steps">
        <div class="step" id="p1">
-            <p>We are highlighting P1</p>
+            <p>In Janurary, Chen Xiaowu, a professor from China's Beihang University, was reported by one of his former students for sexual harrassing female students for years. </p>
+            <p>Later, Chen was removed from his teaching position. This marked the very begining of China's MeToo Movement.</p>
         </div>
         <div class="step" id="p2">
-            <p>We are highlighting P2</p>
+            <p>In April, Shen Yang, a literature professor at Peking University in the 1990s, was accused of raping and sexually harassing his student Gao Yan, who committed suicide after tolerating years of harassment.</p>
+            <p>A coalition of student activists at the univiersity successfully pushed school authorities to open a new investigation into the matter. But their activism came at a high price. Yue Xin, the most outspoken and passionate activist, reportedly endured days of harassment and intimidation from school officials.</p>
         </div>
         <div class="step" id="p3">
-            <p>We are highlighting P3</p>
+            <p>In July, Lei Chuang, founder of a major Chinese NGO dedicated to eliminating discrimination against people with hepatitis B, was assused of sexually assaulting a female volunteer. Lei later resigned from his position.</p>
         </div>
         <div class="step" id="p4">
-            <p>We are highlighting P4</p>
+            <p>Zhu Jun, a famous TV host for China's Central Television, was accused for sexual harassing an intern in 2014. The intern, Xianzi, has brought her case to court in a civil lawsuit.</p>
         </div>
         <div class="step" id="p5">
-            <p>We are highlighting P4</p>
+            <p>In September, Shi Xuecheng, the abbot of Beijing’s Longquan Temple and one of China’s highest-ranking monks, was removed from his post amid allegations of sexual assault.</p>
+        </div>
+        <div class="step" id="p6">
+            <p>In October, Richard Liu, founder and CEO of Chinese e-commerce giant JD.com, was accused of raping a 21-year-old Chinese student in U.S. in summer 2018. </p>
+            <p>Liu is facing a rape accusation in civil court in U.S.</p>
         </div>
     </div>
 </div>
