--- a/src/html/story/chart-04.hbs
+++ b/src/html/story/chart-04.hbs
@@ -3,8 +3,7 @@
     <div id="chart-04" class="chart">
     </div>  
 </div> --}}
-
-<h2>3.Timeline for Laws and Regulations</h2>  
+<h2></h2>  
 {{!-- <section class="intro">
   <div class="container">
     <h2>Vertical Timeline </h2>
@@ -15,62 +14,42 @@
   <ul>
     <li>
       <div>
-        <time>1934</time> At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+        <time>1957</time><strong>Public Security Administration Punishment Regulations: </strong>Anyone molests a woman with obscene words or behaviors shall be detained or warned for less than ten days
       </div>
     </li>
     <li>
       <div>
-        <time>1937</time> Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.
+        <time>1979</time><strong>Criminal Law: </strong>Rape of women by violence, coercion or other means shall be punished by a term of imprisonment of three to ten years.
       </div>
     </li>
     <li>
       <div>
-        <time>1940</time> Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.
+        <time>1986</time><strong>Public Security Administration Punishment Regulations (Revised Edition): </strong>Those who insult women shall be detained for less than 15 days, fined less than 200 yuan or receive a warning, and for less severe cases, they shall be punished by related organization.
       </div>
     </li>
     <li>
       <div>
-        <time>1943</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>1997</time><strong>Criminal Law (Revised Edition): </strong>Those forcibly insults or insults women by violence, coercion, or other methods shall be sentenced to fixed-term imprisonment of not more than five years or detention.
       </div>
     </li>
     <li>
       <div>
-        <time>1946</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>2001</time><strong>First sexual harassment case filed in China: </strong>A woman in northwest China’s Shan'xi Province sued the general manager of her company for sexually harassing her. But after two months of trial, the court dismissed the charges for lack of evidence.
       </div>
     </li>
     <li>
       <div>
-        <time>1956</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>2003</time><strong>First sexual harassment case in China that the plantiff wins: </strong>A female English teacher in China’s Hubei Province accused her supervisor for sexual assault. The plaintiff won the case and the perpetrator was ordered to apologize to the victim and paid a fine of 2,000 yuan ($300)  for moral damages.
       </div>
     </li>
     <li>
       <div>
-        <time>1957</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>2005</time><strong>First legislation in China on sexual harassment: </strong>"Women's Rights Protection Law", which came into effect on December 1, 2005, states that "Sexual harassment against women is prohibited, and victims are entitled to lodge complaints with organizations. Public security organs shall punish the offenders in accordance with the law.
       </div>
     </li>
     <li>
       <div>
-        <time>1967</time> Aenean condimentum odio a bibendum rhoncus. Ut mauris felis, volutpat eget porta faucibus, euismod quis ante.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1977</time> Vestibulum porttitor lorem sed pharetra dignissim. Nulla maximus, dui a tristique iaculis, quam dolor convallis enim, non dignissim ligula ipsum a turpis.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>1985</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>2000</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
-      </div>
-    </li>
-    <li>
-      <div>
-        <time>2005</time> In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.
+        <time>2012</time><strong>Special regulations for female employees' labor protection: </strong>The Chinese State Council states employers' obligations to prevent and stop sexual harassment towards female employees.
       </div>
     </li>
   </ul>
